Add CQL raw inspector tooling and implement CREATE TABLE persistence
Tooling:
- CqlRawInspector + :lib:inspectRaw Gradle task: parse a CQL string and print
  its CQLStatement.Raw class and a bounded reflective field dump.
- TODO/ plans (a-h) for upcoming CQL statement handlers.

CREATE TABLE persistence (plan a):
- CreateTableHandler now persists columns, partition keys, and clustering
  columns (with order) instead of the previous no-op stub.
- VolatileTable stores partition key / clustering state and implements
  getPartitionKey / getClusteringColumns; SeaStarTable gains markPartitionKey
  and markClustering.
- Fix SeaStarRawType.toDataType: replace the incorrect ordinal/protocol-code
  mapping (e.g. uuid -> smallint) with a name-based mapping. Not-yet-supported
  complex types (collections, tuples, vectors, UDTs) return empty and are
  skipped with a warning.
- Strengthen CREATE TABLE tests with column/partition-key/clustering
  assertions; guard the SeaStar-only testSimpleSelect with assumeTrue.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>